--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#03A9F4</color>
     <color name="colorPrimaryDark">#0288D1</color>
     <color name="colorAccent">#03A9F4</color>
+
+    <color name="nav">#262932</color>
+    <color name="home">#4a4f65</color>
+    <color name="nav_text">#92959e</color>
+    <color name="nav_selected_color">#f86e6b</color>
+
 </resources>
